# rustle

./: .gitignore  Cargo.toml  README.md
src/: byte_handler.rs  lib.rs  main.rs  query_service.rs
src/query_service/: dns_query_answer.rs  dns_query_question.rs  mod.rs  q_class.rs  q_type.rs  query_service.rs  response.rs  utils.rs
src/util/: mod.rs  util_funcs.rs  util_types.rs
