[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
num_cpus = "1.16.0"
socket2 = "0.5.5"
futures = "0.3.29"
